--- a/src/app/components/email-form/email-form.component.html
+++ b/src/app/components/email-form/email-form.component.html
@@ -1,3 +1,12 @@
+<div class="margin-top-lg margin-bottom-sm">
+  <a [routerLink]="['/']">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left">
+      <polyline points="15 18 9 12 15 6"></polyline>
+    </svg>
+    <span>Back</span>
+  </a>
+</div>
+<h2 class="margin-bottom-md">Compose Email</h2>
 <form #emailForm="ngForm" (ngSubmit)="sendEmail(emailForm)" class="email-form">
   <div class="form-group">
     <label for="sender" class="col-form-label-sm">From</label>
@@ -57,22 +66,3 @@
     <button class="btn btn-primary" type="submit" [disabled]="!emailForm.form.valid">Send now</button>
   </div>
 </form>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th>From</th>
-      <th>To</th>
-      <th>Subject</th>
-      <th>Message</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let email of emailList">
-      <th>{{email.from}}</th>
-      <td>{{email.to}}</td>
-      <td>{{email.subject}}</td>
-      <td>{{email.body}}</td>
-    </tr>
-  </tbody>
-</table>
