Add Filters input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container">
-  <h1>Send an email</h1>
-  <email-form></email-form>
+  <router-outlet></router-outlet>
 </div>
