--- a/src/app/components/email-list/email-list.component.html
+++ b/src/app/components/email-list/email-list.component.html
@@ -1,4 +1,8 @@
-<h2 class="margin-top-lg margin-bottom-md">Email List</h2>
+<div class="margin-bottom-md">
+  <h2 class="margin-top-lg">Email List</h2>
+  <label for="filters" class="col-form-label-sm">Filter by</label>
+  <input type="text" class="form-control">
+</div>
 <table class="table">
   <thead>
     <tr>
