--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" href="#">Inbox <span class="sr-only">(current)</span></a>
       </li>
     </ul>
-    <button class="btn btn-primary" type="button" [routerLink]="['compose-email']">
+    <button class="btn btn-primary" type="button" routerLink="/compose-email">
       Compose Email
     </button>
   </div>
