--- a/src/app/components/email-list/email-list.component.html
+++ b/src/app/components/email-list/email-list.component.html
@@ -1,7 +1,7 @@
 <div class="margin-bottom-md">
   <h2 class="margin-top-lg">Email List</h2>
   <label for="filters" class="col-form-label-sm">Filter by</label>
-  <input type="text" class="form-control" [(ngModel)]="withFrom">
+  <input type="text" class="form-control" [(ngModel)]="extra" placeholder="Filter by">
 </div>
 <table class="table">
   <thead>
@@ -14,7 +14,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let email of emailList | filter: withFrom, index as i">
+    <tr *ngFor="let email of emailList | filter: extra, index as i">
       <th>{{email.from}}</th>
       <td>{{email.to}}</td>
       <td>{{email.subject}}</td>
