--- a/src/app/components/email/email.component.html
+++ b/src/app/components/email/email.component.html
@@ -18,10 +18,10 @@
   </thead>
   <tbody>
     <tr>
-      <th>{{email.from}}</th>
-      <td>{{email.to}}</td>
-      <td>{{email.subject}}</td>
-      <td>{{email.body}}</td>
+      <th>{{ emailList[index].from }}</th>
+      <td>{{ emailList[index].to }}</td>
+      <td>{{ emailList[index].subject }}</td>
+      <td>{{ emailList[index].body }}</td>
     </tr>
   </tbody>
 </table>
